# subtracker

./: .dockerignore  .gitignore  Dockerfile  PROMPT.md  README.md  REARCHITECTURE.md  audit.py  auth.py  build.yaml  config.yaml  cost_utils.py  database.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  repository.yaml  timeutil.py
.github/workflows/: build.yaml  test.yaml
app/: __main__.py  auth.py  config.py  cost_utils.py  csrf.py  main.py  permissions.py  ratelimit.py  rbac.py  session.py  styles.py  timeutil.py
app/components/: __init__.py  charts.py  forms.py  layout.py  widgets.py
app/db/: __init__.py  audit.py  connection.py  roles.py  schema.py  seed.py  subscriptions.py  teams.py
app/routes/: __init__.py  admin.py  audit_routes.py  auth_routes.py  dashboard.py  import_export.py  manage.py  subscriptions.py  teams.py  users.py
subtracker/: DOCS.md  config.yaml
subtracker-nightly/: DOCS.md  config.yaml
tests/: conftest.py  test_app_smoke.py  test_auth.py  test_cost_utils.py  test_csrf.py  test_http_rbac.py  test_import_export.py  test_lifecycle.py  test_migration.py  test_permissions.py  test_ratelimit.py  test_rbac.py
