[project]
name = "fasthtml-subscription-viewer"
version = "0.1.0"
description = "SubTracker — a multi-tenant subscription cost tracker built with FastHTML."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "python-fasthtml>=0.13.1",
    "sqlite-utils>=3.39",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
