[project]
name = "subtracker"
version = "0.1.0"
description = "SubTracker — a multi-tenant subscription cost tracker built with FastHTML."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "python-fasthtml>=0.13.1",
    "sqlite-utils>=3.39",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Put the repo root on sys.path so `app` imports under a plain `pytest` /
# `uv run pytest` invocation (not just `python -m pytest`).
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["app/styles.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["subtracker", "subtracker-nightly"]

[tool.ruff.lint]
# pycodestyle errors, pyflakes, import sorting, bugbear, comprehensions, pyupgrade.
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",          # line length is handled by the formatter, not enforced here
    "F403", "F405",  # `from fasthtml.common import *` is the framework's intended usage
    "B008",          # function calls in arg defaults are fine for FT component factories
    "E701",          # compact `if cond: return` guards are a deliberate house style
    "B026",          # `f(kw=v, *args)` star-after-keyword is used by FT component calls
    "B905",          # not adopting explicit `zip(strict=)` across the codebase
]

[tool.ruff.lint.per-file-ignores]
# Route modules define many same-named handlers (`get`/`post`) on one APIRouter —
# FastHTML's intended pattern, which pyflakes reads as redefinition.
"app/routes/*.py" = ["F811"]

[tool.mypy]
python_version = "3.13"
# FastHTML builds its HTML tags (Div, H2, Form, …) dynamically, so mypy can't
# resolve names from `from fasthtml.common import *`. Type-checking is therefore
# scoped to the FT-free logic/data layer — where type bugs actually bite — and
# imported view/framework modules are followed but not reported.
files = [
    "app/auth.py", "app/authz.py", "app/config.py", "app/cost_utils.py",
    "app/ratelimit.py", "app/rbac.py", "app/session.py", "app/timeutil.py",
    "app/db",
]
follow_imports = "silent"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
# sqlite-utils types `db["table"]` as `Table | View`; the `.insert/.create/...`
# table methods are correct at runtime but trip union-attr across the data layer.
disable_error_code = ["union-attr"]
